// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertContext type error renders correctly 1`] = `
<span
  className="cssClass[alertContext] cssClass[alertTypeError]"
  data-tx="10.0.0"
  role="alert"
>
  <svg />
  <span
    className="cssClass[alertContextText]"
  >
    Sample Text
  </span>
</span>
`;

exports[`AlertContext type info renders correctly 1`] = `
<span
  className="cssClass[alertContext] cssClass[alertTypeInfo]"
  data-tx="10.0.0"
  role="alert"
>
  <svg />
  <span
    className="cssClass[alertContextText]"
  >
    Sample Text
  </span>
</span>
`;

exports[`AlertContext type system renders correctly 1`] = `
<span
  className="cssClass[alertContext] cssClass[alertTypeSystem]"
  data-tx="10.0.0"
  role="alert"
>
  <svg />
  <span
    className="cssClass[alertContextText]"
  >
    Sample Text
  </span>
</span>
`;

exports[`AlertContext type warning renders correctly 1`] = `
<span
  className="cssClass[alertContext] cssClass[alertTypeWarning]"
  data-tx="10.0.0"
  role="alert"
>
  <svg />
  <span
    className="cssClass[alertContextText]"
  >
    Sample Text
  </span>
</span>
`;
